syntax = "proto3";
package fieldmasktest;

message SubMessage {
  // TODO: handle recursion!
  string name = 1;
  bool enabled = 2;
  int32 value = 3;
}

message FieldMaskTest {
  string string_value = 1;
  double double_value = 2;
  float float_value = 3;
  int32 int32_value = 4;
  int64 int64_value = 5;
  uint32 uint32_value = 6;
  uint64 uint64_value = 7;
  sint32 sint32_value = 8;
  sint64 sint64_value = 9;
  fixed32 fixed32_value = 10;
  fixed64 fixed64_value = 11;
  sfixed32 sfixed32_value = 12;
  sfixed64 sfixed64_value = 13;
  bool bool_value = 14;
  bytes bytes_value = 15;

  SubMessage submessage = 16;
}
